--- a/Notebook_Sentiment_A.ipynb
+++ b/Notebook_Sentiment_A.ipynb
@@ -710,11 +710,11 @@
         "print(df.isnull().sum())"
       ],
       "metadata": {
-        "id": "jGwk07ICrIfS",
-        "outputId": "e938a68c-40a0-4448-9e73-3acbeabc41f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jGwk07ICrIfS",
+        "outputId": "e938a68c-40a0-4448-9e73-3acbeabc41f8"
       },
       "execution_count": 11,
       "outputs": [
@@ -787,12 +787,12 @@
         "    print(\" No text available for word cloud.\")\n"
       ],
       "metadata": {
-        "id": "Ls2m5IAStVDr",
-        "outputId": "ca882824-5712-41c3-e8d5-47202c2b8f9a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 439
-        }
+        },
+        "id": "Ls2m5IAStVDr",
+        "outputId": "ca882824-5712-41c3-e8d5-47202c2b8f9a"
       },
       "execution_count": 12,
       "outputs": [
@@ -872,11 +872,11 @@
         "import contractions\n"
       ],
       "metadata": {
-        "id": "4GlUlzOV3Fk_",
-        "outputId": "fb0a35d5-4edb-4c40-bbc9-88a30d50c652",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4GlUlzOV3Fk_",
+        "outputId": "fb0a35d5-4edb-4c40-bbc9-88a30d50c652"
       },
       "execution_count": 14,
       "outputs": [
@@ -983,11 +983,11 @@
         "        raise ValueError(\"method must be 'tfidf' or 'lstm'\")\n"
       ],
       "metadata": {
-        "id": "IAbXjiVtqUKi",
-        "outputId": "353c9237-d3bd-4e36-ddf5-ef98773f9186",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IAbXjiVtqUKi",
+        "outputId": "353c9237-d3bd-4e36-ddf5-ef98773f9186"
       },
       "execution_count": 17,
       "outputs": [
@@ -1003,11 +1003,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "id": "NiLx5wiNCTWI",
+        "outputId": "d3c4debf-0391-4edd-9612-eccfa1c34982",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Id', 'ProductId', 'UserId', 'ProfileName', 'HelpfulnessNumerator',\n",
+              "       'HelpfulnessDenominator', 'Score', 'Time', 'Summary', 'Text',\n",
+              "       'total_vote', 'reviewTime', 'day_diff', 'wilson_lower_bound',\n",
+              "       'review_length', 'review_month'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Splitting for both Models\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9FSmjdQHEj_l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X = df['Text']\n",
+        "y = df['Score']\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
+        "\n",
+        "train_df = pd.DataFrame({'Text': X_train, 'Label': y_train})\n",
+        "test_df  = pd.DataFrame({'Text': X_test, 'Label': y_test})\n",
+        "\n"
+      ],
       "metadata": {
         "id": "dX-X6gIk313R"
       },
-      "execution_count": 16,
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vD3h03pPFUOo"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
